tests/output/self_hosted/loop_var_leak_error.txt
tests/loop_var_leak_error.oomph:4: error: variable not found: i

    print(i)
          ^

